{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 1178,
  "lineage": "b4a32211-f277-51cb-aad8-36b451cb6dcb",
  "resources": [
    {
      "module": "module.prod.module.analytics_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e49808d12fe9dae3",
            "arn": "arn:aws:ec2:us-west-1:235494798404:instance/i-0093bc8536c1de47c",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0093bc8536c1de47c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "prod-analytics_ec2",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0da64967e349d0fb6",
            "private_dns": "ip-10-0-1-5.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.5",
            "public_dns": "ec2-54-153-71-4.us-west-1.compute.amazonaws.com",
            "public_ip": "54.153.71.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011282aea6fca8a17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-064e9207b54f26d0f",
            "tags": {
              "Name": "prod-analytics-ec2"
            },
            "tags_all": {
              "Name": "prod-analytics-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0de4916735fea0f97"
            ]
          },
          "dependencies": [
            "module.prod.module.analytics_ec2.aws_key_pair.my_key",
            "module.prod.module.analytics_ec2.data.aws_ami.amazon_linux",
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.private",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-private-data",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.data"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:235494798404:loadbalancer/app/prod-alb/0f53a896632f5ade",
            "arn_suffix": "app/prod-alb/0f53a896632f5ade",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "prod-alb-78963522.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:235494798404:loadbalancer/app/prod-alb/0f53a896632f5ade",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05217daa36595aadf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013dc1d9188780f8d"
              },
              {
                "subnet_id": "subnet-060a15520a1b9f03d"
              }
            ],
            "subnets": [
              "subnet-013dc1d9188780f8d",
              "subnet-060a15520a1b9f03d"
            ],
            "vpc_id": "vpc-0e2e9e81716a8b74a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.private",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.alb",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-private-data",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.data"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:235494798404:listener/app/prod-alb/0f53a896632f5ade/b3f5bba6bcbb65a1",
            "certificate_arn": "arn:aws:acm:us-west-1:235494798404:certificate/e95bae0b-48e9-4405-9827-fa51c3d28e76",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:235494798404:targetgroup/prod-target/92e0797d9ef6e252",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:235494798404:listener/app/prod-alb/0f53a896632f5ade/b3f5bba6bcbb65a1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:235494798404:loadbalancer/app/prod-alb/0f53a896632f5ade",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.domain_records.aws_route53_record.alb_cert_validation",
            "module.domain_records.data.aws_route53_zone.hosted_zone",
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.acm_cert.aws_acm_certificate.alb",
            "module.prod.module.region_us_west_1.module.acm_cert.aws_acm_certificate_validation.alb",
            "module.prod.module.region_us_west_1.module.ecs.aws_lb.app",
            "module.prod.module.region_us_west_1.module.ecs.aws_lb_target_group.ecs",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.private",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.alb",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-private-data",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_route_table_association.rt-public-app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.alb",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.app",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.data"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:235494798404:targetgroup/prod-target/92e0797d9ef6e252",
            "arn_suffix": "targetgroup/prod-target/92e0797d9ef6e252",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:235494798404:targetgroup/prod-target/92e0797d9ef6e252",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "prod-target",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:internet-gateway/igw-0fd818d0703681585",
            "id": "igw-0fd818d0703681585",
            "owner_id": "235494798404",
            "tags": {
              "Name": "prod-igw"
            },
            "tags_all": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:route-table/rtb-03ed2b825be850e4c",
            "id": "rtb-03ed2b825be850e4c",
            "owner_id": "235494798404",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-rt-private"
            },
            "tags_all": {
              "Name": "prod-rt-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:route-table/rtb-0c1003eaebb23a216",
            "id": "rtb-0c1003eaebb23a216",
            "owner_id": "235494798404",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd818d0703681585",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-rt-public"
            },
            "tags_all": {
              "Name": "prod-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:security-group/sg-05217daa36595aadf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "Allow alb to send requests to app",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de4916735fea0f97"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-05217daa36595aadf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow alb to recieve requests from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-sg-alb",
            "name_prefix": "",
            "owner_id": "235494798404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-alb"
            },
            "tags_all": {
              "Name": "prod-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:security-group/sg-0b4074a3726678a9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow analytics ec2 to send requests to internet with HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow analytics ec2 to send requests to internet with HTTPS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow analytics ec2 to send requests to psql db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f0ba742eecf83b"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0b4074a3726678a9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod-sg-analytics_ec2",
            "name_prefix": "",
            "owner_id": "235494798404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-analytics_ec2"
            },
            "tags_all": {
              "Name": "prod-sg-analytics_ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:security-group/sg-0de4916735fea0f97",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow app to send requests to internet with HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow app to send requests to psql db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f0ba742eecf83b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow app to send requests to redis cache",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-087f0ba742eecf83b"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "id": "sg-0de4916735fea0f97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow app to recieve requests from alb",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05217daa36595aadf"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "prod-sg-app",
            "name_prefix": "",
            "owner_id": "235494798404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-app"
            },
            "tags_all": {
              "Name": "prod-sg-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:security-group/sg-087f0ba742eecf83b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-087f0ba742eecf83b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow psql db to respond to analytics ec2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b4074a3726678a9a"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow psql db to respond to app",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de4916735fea0f97"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "Allow redis cache to respond to app",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0de4916735fea0f97"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "prod-sg-data",
            "name_prefix": "",
            "owner_id": "235494798404",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-sg-data"
            },
            "tags_all": {
              "Name": "prod-sg-data"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_accepts_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow alb to recieve requests from internet",
            "from_port": 443,
            "id": "sgrule-1478422346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05217daa36595aadf",
            "security_group_rule_id": "sgr-0fbbcaa594a20f7c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.alb",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow alb to send requests to app",
            "from_port": 443,
            "id": "sgrule-1092668861",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05217daa36595aadf",
            "security_group_rule_id": "sgr-098c9ec54d52099ed",
            "self": false,
            "source_security_group_id": "sg-0de4916735fea0f97",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.alb",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "analytics_accepts_internet_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow analytics ec2 to send requests to internet with HTTPS",
            "from_port": 80,
            "id": "sgrule-4010859684",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4074a3726678a9a",
            "security_group_rule_id": "sgr-00c6e56cc64fce84f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.analytics",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "analytics_accepts_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh",
            "from_port": 22,
            "id": "sgrule-3856402892",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4074a3726678a9a",
            "security_group_rule_id": "sgr-0047bfff9397b9e2d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.analytics",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "analytics_to_internet_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow analytics ec2 to send requests to internet with HTTPS",
            "from_port": 443,
            "id": "sgrule-3160973119",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4074a3726678a9a",
            "security_group_rule_id": "sgr-0f90ac14fb14f6e36",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.analytics",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "analytics_to_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow analytics ec2 to send requests to psql db",
            "from_port": 5432,
            "id": "sgrule-3687783422",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b4074a3726678a9a",
            "security_group_rule_id": "sgr-09bca2749968f778c",
            "self": false,
            "source_security_group_id": "sg-087f0ba742eecf83b",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.analytics",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_accepts_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow app to recieve requests from alb",
            "from_port": 443,
            "id": "sgrule-291366902",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de4916735fea0f97",
            "security_group_rule_id": "sgr-0aebf61cc9c9e4c69",
            "self": false,
            "source_security_group_id": "sg-05217daa36595aadf",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.alb",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_accepts_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow ssh",
            "from_port": 22,
            "id": "sgrule-4289925549",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de4916735fea0f97",
            "security_group_rule_id": "sgr-0a7fabd3dd431896f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow app to send requests to internet with HTTPS",
            "from_port": 443,
            "id": "sgrule-2261230057",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de4916735fea0f97",
            "security_group_rule_id": "sgr-0736008388b68c798",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow app to send requests to psql db",
            "from_port": 5432,
            "id": "sgrule-3125652825",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de4916735fea0f97",
            "security_group_rule_id": "sgr-03d4c899118cc7bd2",
            "self": false,
            "source_security_group_id": "sg-087f0ba742eecf83b",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "app_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow app to send requests to redis cache",
            "from_port": 6379,
            "id": "sgrule-3831035166",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0de4916735fea0f97",
            "security_group_rule_id": "sgr-0c6f542750a1e82d5",
            "self": false,
            "source_security_group_id": "sg-087f0ba742eecf83b",
            "timeouts": null,
            "to_port": 6379,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data_accepts_psql_analytics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow psql db to respond to analytics ec2",
            "from_port": 5432,
            "id": "sgrule-1659155477",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087f0ba742eecf83b",
            "security_group_rule_id": "sgr-0cad9643e75d5fcf4",
            "self": false,
            "source_security_group_id": "sg-0b4074a3726678a9a",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.analytics",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data_accepts_psql_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow psql db to respond to app",
            "from_port": 5432,
            "id": "sgrule-3868066505",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087f0ba742eecf83b",
            "security_group_rule_id": "sgr-0c5113b1b99d805ac",
            "self": false,
            "source_security_group_id": "sg-0de4916735fea0f97",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "data_accepts_redis_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow redis cache to respond to app",
            "from_port": 6379,
            "id": "sgrule-241746850",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-087f0ba742eecf83b",
            "security_group_rule_id": "sgr-07ff0ace538b53380",
            "self": false,
            "source_security_group_id": "sg-0de4916735fea0f97",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.app",
            "module.prod.module.region_us_west_1.module.vpc.aws_security_group.data",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:vpc/vpc-0e2e9e81716a8b74a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-021adeaf55d0225d6",
            "default_route_table_id": "rtb-0333b9f180b8635a7",
            "default_security_group_id": "sg-09a58adfa04a93161",
            "dhcp_options_id": "dopt-078599114792890c9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e2e9e81716a8b74a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0333b9f180b8635a7",
            "owner_id": "235494798404",
            "tags": {
              "Name": "prod-vpc"
            },
            "tags_all": {
              "Name": "prod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f0ecd3b5fe0c0b",
            "route_table_id": "rtb-03ed2b825be850e4c",
            "subnet_id": "subnet-072d629379c3bfdc9"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.private",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.data"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0f7de24a494fb7",
            "route_table_id": "rtb-0c1003eaebb23a216",
            "subnet_id": "subnet-013dc1d9188780f8d"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.alb"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0776224e75eb85b98",
            "route_table_id": "rtb-0c1003eaebb23a216",
            "subnet_id": "subnet-064e9207b54f26d0f"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-013dc1d9188780f8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013dc1d9188780f8d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-alb-subnet-us-west-1a"
            },
            "tags_all": {
              "Name": "prod-alb-subnet-us-west-1a"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-064e9207b54f26d0f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064e9207b54f26d0f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-subnet-us-west-1a"
            },
            "tags_all": {
              "Name": "prod-app-subnet-us-west-1a"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"0\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-072d629379c3bfdc9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072d629379c3bfdc9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-data-subnet-us-west-1a"
            },
            "tags_all": {
              "Name": "prod-data-subnet-us-west-1a"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-private-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f426c3fb37582606",
            "route_table_id": "rtb-03ed2b825be850e4c",
            "subnet_id": "subnet-047afa1b9ce5d7953"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.private",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.data"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eefa68b2c1af5871",
            "route_table_id": "rtb-0c1003eaebb23a216",
            "subnet_id": "subnet-060a15520a1b9f03d"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.alb"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e98f08a254d3064",
            "route_table_id": "rtb-0c1003eaebb23a216",
            "subnet_id": "subnet-0b49830f25c18de89"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_internet_gateway.igw",
            "module.prod.module.region_us_west_1.module.vpc.aws_route_table.public",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc",
            "module.prod.module.region_us_west_1.module.vpc.module.subnets_by_az.aws_subnet.app"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-060a15520a1b9f03d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060a15520a1b9f03d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-alb-subnet-us-west-1c"
            },
            "tags_all": {
              "Name": "prod-alb-subnet-us-west-1c"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-0b49830f25c18de89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b49830f25c18de89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-app-subnet-us-west-1c"
            },
            "tags_all": {
              "Name": "prod-app-subnet-us-west-1c"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.prod.module.region_us_west_1[0].module.vpc.module.subnets_by_az[\"1\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].us_west_1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:235494798404:subnet/subnet-047afa1b9ce5d7953",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047afa1b9ce5d7953",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "235494798404",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-data-subnet-us-west-1c"
            },
            "tags_all": {
              "Name": "prod-data-subnet-us-west-1c"
            },
            "vpc_id": "vpc-0e2e9e81716a8b74a"
          },
          "dependencies": [
            "module.prod.module.region_us_west_1.data.aws_availability_zones.available",
            "module.prod.module.region_us_west_1.module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}